fix: removes overflow on phone, unintentional hover styling

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -4,6 +4,7 @@
     position: relative;
     display: flex; 
     min-height: 100vh;
+    overflow: hidden;
 
     .cc-layout--card {
         color: var(--majorelle);
